api schema update:: health check
